tests/negative/runtime/arrayset_empty/input.ci
void main() {
    int[] xs = [];
    arraySet(xs, 0, 1);
}
